--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+  Hit RUN to see this project in action!
+  
+  This project will auto-refresh as you edit the HTML, CSS and JS. See README.md for more info (including how to disable auto-refresh and install packages).
+-->
+
 <!DOCTYPE html>
 <html>
 
@@ -36,6 +42,17 @@
     
   </div>
 </div>
+  <div class="Score-manager">
+    <button>Start Game </button>
+    <div class="right-hit">
+      <h3>Right Hit</h3>
+      <h3 id="rh"> 0 </h3>
+    </div>
+    <div class="wrong-hit">
+      <h3>Wrong Hit</h3>
+      <h3 id="wh"> 0 </h3>
+    </div>
+  </div>
 </div>
   
 <script type="module" src="script.js"></script>
