--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Replit</title>
+  <title>Bubble Game 28</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <div class="main">
-  
 <div class="panel">
 <div class="ptop">
   <div class="elem">
@@ -33,11 +32,12 @@
   </div>
 </div>
   <div class="pbottom">
-    
   </div>
 </div>
   <div class="Score-manager">
+    <div>
     <button>Start Game </button>
+    </div>
     <div class="right-hit">
       <h3>Right Hit</h3>
       <h3 id="rh"> 0 </h3>
@@ -46,11 +46,12 @@
       <h3>Wrong Hit</h3>
       <h3 id="wh"> 0 </h3>
     </div>
-  </div>
+    <div class="res">
+      <h3>Restart</h3>
+    </div>
 </div>
-  
+</div>
 <script type="module" src="script.js"></script>
-
 </body>
 
 </html>
