--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -10,7 +9,12 @@
 
 <body>
 <div class="main">
+  <div id="loader">  
+    <h2>WELCOME TO THE BUBBLE GAME </h2>
+    <h1>0%</h1>
+    </div>
 <div class="panel">
+  
 <div class="ptop">
   <div class="elem">
    <h4>Hit</h4> 
@@ -51,6 +55,8 @@
     </div>
 </div>
 </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="module" src="script.js"></script>
 </body>
 
